alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-alb
  namespace: eks-alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-alb
                port:
                  number: 80
